--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <!--Loader-->
                     
                     <div id="loading">
-                        <img src="img/loading.gif" alt="loading">
+                        <img src="loading.gif" alt="loading">
                     </div>
                     
                     <!--Results-->
